adds new vehicle search by license plate

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
                 <section  class="info-type-time">
                     <div>
-                        <p class="name-list-vehicle">Tipo - Placa</p>
+                        <p class="name-list-vehicle">Type - Plate</p>
                     </div>
                     <div >
-                        <p class="name-data-vehicle">hora - fecha</p>
+                        <p class="name-data-vehicle">Hour - Date</p>
                     </div>
                 </section>
 
@@ -65,22 +65,11 @@
                 <input id="search-vehicle-plate" type="text" placeholder="plate">
                 <button class="boton-buscar" id="Search"> &#X1F50D; Search</button>
 
-                <section id="output-information" class="info-type-time">
-                    <div>
-                        <p class="name-list-vehicle">Tipo - Placa</p>
-                    </div>
-                    <div >
-                        <p class="name-data-vehicle">hora - entrada </p>
-                    </div>
-                    <div>
-                        <p class="name-data-vehicle">hora - salida</p>
-                    </div>
-                </section>
-
-                <section class="container-data-vehicles">
-                    <ul id="find-vehicles-list" class="vehicles" >
+                <section id="output-information" class="info-pay">
+                    <ul id="search-plate-list">
                     </ul>
-                   </section>
+                    <button id="button-pay" class="button-pay"> PAY &#x1F4B0; </button>
+                </section>
             </div>
           
 
