--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
                     <option id="car" value="Car"> &#x1F697; Car</option>
                     <option id="motorcycle" value="Motorcycle"> &#x1F6F5; Motorcycle </option>
                     <!-- <option id="bicycle" value="Bicycle"> &#x1F6B4; Bicycle </option> -->
-                </select>
-                    <input id="ingresar-placa-vehiculo" type="text" placeholder="plate">
-                    <button id="boton-ingresar-vehiculo" class="boton-ingresar-vehiculo" > &#x1F51D; Enter</button>
-                    <!-- <button id="boton-cerrar-modal"  class="cerrar"> &#X274C; close</button> -->
                 
+                    <form action="" method="post">
+                        <input id="ingresar-placa-vehiculo" type="text" placeholder="plate">
+                        <button id="boton-ingresar-vehiculo" class="boton-ingresar-vehiculo" > &#x1F51D; Enter</button>
+                   <!-- <button id="boton-cerrar-modal"  class="cerrar"> &#X274C; close</button> -->
+                    </form>
+                </select>
                 
             </div>
         </div>
